fix dependency issue